force-app/main/default/objects/Round_Robin_Assignment_Rule__c/Round_Robin_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Round Robin Assignment Rule</label>
    <nameField>
        <displayFormat>RRAR-{0}</displayFormat>
        <label>Round Robin Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Assignment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>