force-app/main/default/objects/Round_Robin_Assignment_Rule__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>