force-app/main/default/objects/Round_Robin_Assignment_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Is Blank</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Does Not Equal</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>