force-app/main/default/objects/Round_Robin_Assignment_Rule__c/fields/Round_Robin_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Assignment__c</fullName>
    <label>Round Robin Assignment</label>
    <referenceTo>Round_Robin_Assignment__c</referenceTo>
    <relationshipLabel>Round Robin Assignment Rules</relationshipLabel>
    <relationshipName>Round_Robin_Assignment_Rules1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>